--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+
 /*Asterisk wildcard selector to override default styles added to the browser */
 * {
     padding: 0;
@@ -5,6 +8,12 @@
     box-sizing: border-box;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #3a3a3a;
+}
 /* General styles */
 body {
     min-height: 100vh;
