--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,6 @@
     box-sizing: border-box;
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: #3a3a3a;
-}
 /* General styles */
 body {
     min-height: 100vh;
@@ -21,6 +15,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
 
