--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,12 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
 
 /* Header */
 header {
@@ -35,17 +41,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit; 
-}
-
-h1 {
-
-    font-family: 'Oswald', sans-serif;
-
-    text-transform: uppercase;
-
-    letter-spacing: 2px;
-
-    color: #252525;
 }
 
 #menu {
@@ -87,13 +82,35 @@ nav {
     font-size: 2rem;
 }
 
-
 /* Main content*/
 main {
-    background-color: lightblue;
     /* Make main element take up any surplus space to push footer to the bottom */
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+/* Hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, 0.7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}   
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 
 /* Footer */
@@ -102,7 +119,7 @@ main {
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
-    list-style: none;
+    list-style-type: none;
 }
 
 #social-networks i {
@@ -143,6 +160,12 @@ main {
     main {
         /*Push main content down to accomodate larger header */
         margin-top: 79px;
+    }
+
+    /* Hero */
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 
    /*Large devices (laptops and desktops, 992px and up) */
