--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-/* Import Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
-/*Asterisk wildcard selector to override default styles added to the browser */
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
@@ -40,7 +40,7 @@ header {
 
 header a {
     text-decoration: none;
-    color: inherit; 
+    color: inherit;
 }
 
 #menu {
@@ -57,7 +57,7 @@ header a {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/*Navbar styles with dropdown toggle */
+/* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
     background-color: #ffffff;
@@ -69,7 +69,7 @@ nav {
     top: 100%;
 }
 
-/*Nav toggle */
+/* Nav toggle */
 #nav-toggle:checked~nav {
     display: block;
 }
@@ -82,9 +82,9 @@ nav {
     font-size: 2rem;
 }
 
-/* Main content*/
+/* Main content */
 main {
-    /* Make main element take up any surplus space to push footer to the bottom */
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
@@ -99,7 +99,7 @@ main {
 
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
-    background-color: rgba(241, 109, 107, 0.7);
+    background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
     bottom: 30px;
@@ -107,10 +107,37 @@ main {
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
-}   
+}
 
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
+}
+
+/* Reasons section */
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical > div,
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
 }
 
 /* Footer */
@@ -128,7 +155,7 @@ main {
     color: #3a3a3a;
 }
 
-/* Media queries: tablets and larger (768px and up*/
+/* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
     nav {
@@ -137,10 +164,12 @@ main {
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem;
-            }
+    }
+
     #menu {
         display: flex;
     }
+
     #menu > li {
         padding-left: 1rem;
     }
@@ -154,11 +183,10 @@ main {
         line-height: 75px;
         margin: 0 0.5rem;
     }
-}
 
     /* Main content */
     main {
-        /*Push main content down to accomodate larger header */
+        /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
 
@@ -167,10 +195,11 @@ main {
         width: 300px;
         right: 50px;
     }
+}
 
-   /*Large devices (laptops and desktops, 992px and up) */
-   @media screen and (min-width: 992px) {
-   #menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
-   }
-   }
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
