styled photos in gallery for larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,15 @@ main {
   color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+#photos {
+    column-count: 2;
+    column-gap: 0;
+}
+}
+
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
   /* Header */
@@ -268,12 +277,21 @@ main {
     text-align: end;
     align-self: flex-end;
   }
+  
+  /* Gallery Page */
+  #photos {
+    column-count: 3;
+  }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
   #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
+  }
+  /*Gallery Page */
+  #photos {
+    column-count: 4;
   }
 }
 
@@ -302,5 +320,10 @@ main {
 
   #benefits-physical > div {
     align-self: flex-end;
+  }
+
+    /* Gallery Page */
+  #photos {
+    column-count: 4;
   }
 }
