--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,42 @@ main {
     padding: 20px 10% 0 10%;
     flex-grow: 1;
 }
+#signup-form {
+  color: #ffffff;
+  background-color: rgba(60, 60, 60, 0.6);
+  padding: 30px;
+}
+ #signup h2 {
+  color: #fafafa;
+  margin-bottom: 20px;
+ }
+
+ .text-input {
+  background: transparent;
+  color: #fafafa;
+  width: 100px;
+  height: 25px;
+  margin: 5px 0 20px 0;
+  border: 1px solid #fafafa;
+  border-radius: 2px;
+  padding: 0 5px;
+ }
+
+ #radio-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+ }
+
+ #join-button {
+  background-color: #454b1b;
+  border-radius: 2px;
+  color:#fafafa;
+  font-size: 100%;
+  padding 15px 32px;
+  margin-top: 20px;
+}
+
 
 /* Footer */
 #social-networks {
@@ -293,6 +329,28 @@ main {
   /* Gallery Page */
   #photos {
     column-count: 3;
+  }
+
+  /* Sign Up Page */
+  #signup {
+    background-position: center;
+    position: relative;
+  }
+
+  #signup-form {
+    position: absolute;
+    max-width: 400px;
+    margin left: 10%;
+    margin-top: 150px;
+  }
+  
+  .text-input: hover {
+    border-color: #f16c6b;
+  }
+
+  .join-button: hover {
+    background-color: #fafafa;
+    color: #454b1b;
   }
 }
 
