--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ main {
   border-radius: 2px;
   color:#fafafa;
   font-size: 100%;
-  padding 15px 32px;
+  padding: 15px 32px;
   margin-top: 20px;
 }
 
@@ -340,15 +340,15 @@ main {
   #signup-form {
     position: absolute;
     max-width: 400px;
-    margin left: 10%;
+    margin-left: 10%;
     margin-top: 150px;
   }
   
-  .text-input: hover {
+  .text-input:hover {
     border-color: #f16c6b;
   }
 
-  .join-button: hover {
+  .join-button:hover {
     background-color: #fafafa;
     color: #454b1b;
   }
